# dpp-interactive

./: CMakeLists.txt  README.md
dpp-interactive/: entityfilterdata.h  interactivedata.cpp  interactivedata.h  interactiveresult.h  interactiveservice.cpp  interactiveservice.h
dpp-interactive/pagination/: interactionpage.cpp  interactionpage.h  paginator.cpp  paginator.h  staticpaginator.cpp  staticpaginator.h
dpp-interactive/utils/: ezcoro.h
dppinteract/: entityfilterdata.h  interactivedata.h  interactiveresult.h  interactiveservice.cpp  interactiveservice.h
dppinteract/pagination/: interactionpage.cpp  interactionpage.h  paginator.cpp  paginator.h  staticpaginator.cpp  staticpaginator.h
